Fixed button sizing on mobile views

--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ li{
     border: none;
     background: none;
 
-    width: 20rem;
+    width: 18rem;
     height: 4rem;
     
     background: #B1BCA0;
@@ -77,7 +77,7 @@ li{
     border: none;
     background: none;
 
-    width: 20rem;
+    width: 18rem;
     height: 4rem;
     
     background: #B1BCA0;
@@ -188,7 +188,7 @@ option{
     .result-container {
         flex-direction: row !important;
 
-        width: 8rem;
+        width: 7rem;
         height: 5rem;
 
         font-size: x-large !important;
